quay đầu là bờ nhưng mà là bờ bụi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,7 +14,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppVuaTiengViet"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".GameShowRound3"
+            android:exported="false" />
+        <activity
+            android:name=".round2_loichinhta"
+            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".GameShowRound2"-->
+<!--            android:exported="false" />-->
+        <activity
+            android:name=".GameShowRound1"
+            android:exported="false" />
+        <activity
+            android:name=".ChonCheDoChoi"
+            android:exported="false" />
         <activity
             android:name=".cuahang"
             android:exported="false" />
@@ -27,8 +42,8 @@
             android:name=".ManChoi"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".GameShowRound2"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,7 +59,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/paths" />
